--- a/navigatorShop.html
+++ b/navigatorShop.html
@@ -70,8 +70,11 @@
                 <a href="navigatorCart.html"  class="allLink">
                     <h1>Cart</h1>
                 </a>
-                <a href="navigatorOrder.html" style="padding-right: 5px;"  class="allLink">
+                <a href="navigatorOrder.html"  class="allLink">
                     <h1>Orders</h1>
+                </a>
+                <a href="admin.html" style="padding-right: 8px;"  class="allLink">
+                    <h1>Admin</h1>
                 </a>
             </div>
         </nav>
